--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Leo Zhang</h1>
-							<p class="major">Hi there! I’m Leo Zhang, a double major in Computer Science and Mathematics 
+							<p class="major">Hi there! I’m Leo Zhang, double majoring in Computer Science and Mathematics 
 								at Vanderbilt University with a minor in Data Science. 
 								I am passionate about leveraging technology and data 
 								to drive impactful solutions. 
@@ -31,7 +31,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/personal_picture.jpg" alt="" />
 						</div>
 					</section>
 
@@ -49,7 +49,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/farm_system.png" alt="" />
 						</div>
 					</section>
 
@@ -64,7 +64,7 @@
 								The project involved using design patterns like Iterator and Factory to ensure modularity and extensibility.</p>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/blockchain.png" alt="" />
 						</div>
 					</section>
 
@@ -78,7 +78,7 @@
 								crafted a user interface for capturing player input, and displayed solutions in lexicographical order.</p>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/text_twist.png" alt="" />
 						</div>
 					</section>
 
