--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!DOCTYPE HTML>
-<!--
-	Story by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Leo Zhang's Website</title>
@@ -27,7 +21,7 @@
 								to drive impactful solutions. 
 								Explore my website to learn more about my experiences, projects, and interests.</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="/assets/Leo Zhang Resume.pdf" class="button big wide smooth-scroll-middle">My resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
