--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 								to drive impactful solutions. 
 								Explore my website to learn more about my experiences, projects, and interests.</p>
 							<ul class="actions stacked">
-								<li><a href="/assets/Leo Zhang Resume.pdf" class="button big wide smooth-scroll-middle">My resume</a></li>
+								<li><a href="assets/Leo Zhang Resume.pdf" class="button big wide smooth-scroll-middle">My resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
