--- a/index.html
+++ b/index.html
@@ -76,6 +76,27 @@
 						</div>
 					</section>
 
+				<!-- Skills -->
+					<section class="wrapper style1 align-center">
+    					<div class="inner">
+        					<h2>Skills</h2>
+        					<div class="features">
+            					<div class="feature">
+                					<h3>Programming Languages</h3>
+                					<p>Java, C++, Python, JavaScript, SQL</p>
+            					</div>
+            					<div class="feature">
+                					<h3>Frameworks & Tools</h3>
+                					<p>Spring Boot, Vue.js, Node.js, MyBatis, Git, React</p>
+            					</div>
+            					<div class="feature">
+                					<h3>Soft Skills</h3>
+                					<p>Team Collaboration, Problem-Solving, Communication</p>
+            					</div>
+       	 					</div>
+    					</div>
+					</section>
+
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
