change skill second

--- a/index.html
+++ b/index.html
@@ -28,8 +28,42 @@
 							<img src="images/personal_picture.jpg" alt="" />
 						</div>
 					</section>
+				
+					
+				<!-- Skills -->
+					<section class="wrapper style1 align-center">
+						<div class="inner">
+							<h2>Skills</h2>
+							<div class="features">
+								<div class="feature">
+									<h3>Programming Languages</h3>
+									<p>Java, C++, Python, JavaScript, SQL</p>
+								</div>
+								<div class="feature">
+									<h3>Frameworks & Tools</h3>
+									<p>Spring Boot, Vue.js, Node.js, MyBatis, Git, React</p>
+								</div>
+								<div class="feature">
+									<h3>Soft Skills</h3>
+									<p>Team Collaboration, Problem-Solving, Communication</p>
+								</div>
+								</div>
+						</div>
+					</section>
 
-				<!-- Two -->
+				<!-- Two -->					
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Text Twist Recursive Solver</h2>
+							<p>In November 2023, I developed a Java-based solver for the Text Twist game 
+								to identify all permissible words from a random set of seven characters. 
+								I designed a recursive backtracking algorithm, 
+								crafted a user interface for capturing player input, and displayed solutions in lexicographical order.</p>
+						</div>
+						<div class="image">
+							<img src="images/text_twist.png" alt="" />
+						</div>
+					</section>
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Professional Experience</h2>
@@ -74,27 +108,6 @@
 						<div class="image">
 							<img src="images/text_twist.png" alt="" />
 						</div>
-					</section>
-
-				<!-- Skills -->
-					<section class="wrapper style1 align-center">
-    					<div class="inner">
-        					<h2>Skills</h2>
-        					<div class="features">
-            					<div class="feature">
-                					<h3>Programming Languages</h3>
-                					<p>Java, C++, Python, JavaScript, SQL</p>
-            					</div>
-            					<div class="feature">
-                					<h3>Frameworks & Tools</h3>
-                					<p>Spring Boot, Vue.js, Node.js, MyBatis, Git, React</p>
-            					</div>
-            					<div class="feature">
-                					<h3>Soft Skills</h3>
-                					<p>Team Collaboration, Problem-Solving, Communication</p>
-            					</div>
-       	 					</div>
-    					</div>
 					</section>
 
 				<!-- Five -->
