--- a/index.html
+++ b/index.html
@@ -51,22 +51,25 @@
 						</div>
 					</section>
 
+				<!-- Three -->
+				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<div class="content">
+						<h1>Professional Experience</h1>
+						<h2>Flashcard Collections</h2>
+						<p>For the Flashcard Collections, I used Next.js to create a seamless user interface 
+							and experience. I leveraged Firebase to securely store and manage all the flashcards. 
+							Clerk was integrated for streamlined sign-in and sign-out processes, 
+							while Stripe handled payment functionalities. Additionally, I used OpenAI to automatically generate flashcards, 
+							ensuring a diverse and comprehensive collection.</p>
+					</div>
+					<div class="image">
+						<img src="images/flashcard.png" alt="" />
+					</div>
+				</section>
+
 				<!-- Two -->					
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
-							<h2>Text Twist Recursive Solver</h2>
-							<p>In November 2023, I developed a Java-based solver for the Text Twist game 
-								to identify all permissible words from a random set of seven characters. 
-								I designed a recursive backtracking algorithm, 
-								crafted a user interface for capturing player input, and displayed solutions in lexicographical order.</p>
-						</div>
-						<div class="image">
-							<img src="images/text_twist.png" alt="" />
-						</div>
-					</section>
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Professional Experience</h2>
 							<h3>JD.com Software Intern</h3>
 							<p>In summer 2024, I interned at JD.com, designing and developing platform and service product applications. 
 								My responsibilities included performance tuning, cloud services, and maintaining my product websites. 
